# trabalho-compiladores

./: .gitignore  CMakeLists.txt  LICENSE  README.md  analise_semantica.txt  build.bat  build.sh  codigo.semantico  codigo.txt
.github/workflows/: ci.yml
docs/tarefa-2/: grammar-bnf.txt
include/: ast.h  compiler.h  lexer.h  parser.h  semantic.h  symbol_table.h  utils.h
src/: ast.c  lexer.c  main.c  parser.c  parser.y  scanner.l  semantic.c  symbol_table.c  utils.c
tests/: output.txt  simple_cmd.txt  test_lexer.c  teste_condicionais.txt  teste_declaracoes.txt  teste_expressoes.txt  teste_geral.txt  teste_repeticoes.txt  teste_semantico_correto.p-  teste_semantico_correto.txt  teste_semantico_correto2.p-  teste_semantico_erros.p-  teste_semantico_erros.txt  teste_semantico_erros2.p-
